--- a/values.yaml
+++ b/values.yaml
@@ -1,29 +1,28 @@
-app:
-  name: hello_app
-  standName:  
-  secretName: hello_secret
-  branch: develop
-  history:
-    ttl: 60
+app:                               ### блок про деплой ### 
+  name: hello_app                  # название приложения
+  standName:                       # полезная переменная для выкатки на разные стенды
+  secretName: hello_secret         # имя файла с секретами
+  branch: develop                  # полезная переменная для передачи в аннтоцию имени ветки
 
-image:
-  app: hellonginxdemos/hello
-  tag:  latest
+image:                             ### блок про образ ###
+  app: hellonginxdemos/hello       # имя образа
+  tag:  latest                     # тег образа
   
-service:
-  internalPort: 80
-  externalPort: 80
+service:                           ### блок про сервис ###
+  internalPort: 80                 # порт внутренний
+  externalPort: 80                 # порт внешний
 
-sample: 
-  env: 123
+sample:                            ### блок про переменные ###
+  env: 123                         # здесь могла бы быть ваша переменная
 
-config:
-  env: 456
+config:                            
+  env: 456                         # здесь могла бы быть ваша переменная для конфигмапы
 
-limits:
-  cpu: "2"
-  memory: "4Gi"
-requests:
-  cpu: "100m"
-  memory: "260Mi" 
+limits:                            ### блок про лимиты ###
+  cpu: "2"                         # 2 ядра, если приложение потребует больше, оно будет тормозить
+  memory: "4Gi"                    # 4Гб ОЗУ, если приложение потребует больше, придёт ООМ killer :)
+
+requests:                          ### блок про реквесты (минимальные значения для запуска приложения) ###
+  cpu: "100m"                      # 0.1 ядра, 260Мб ОЗУ - тут мы указываем, что приложению необходимо минимум вот столько
+  memory: "260Mi"                  # соответственно sheduler назначит под на ноду, где есть столько ресурсов
 
