--- a/values.yaml
+++ b/values.yaml
@@ -3,6 +3,7 @@ app:                               ### блок про деплой ###
   standName:                       # полезная переменная для выкатки на разные стенды
   secretName: hello_secret         # имя файла с секретами
   branch: develop                  # полезная переменная для передачи в аннтоцию имени ветки
+  replicas: 2                      # количество реплик для приложения
 
 image:                             ### блок про образ ###
   app: hellonginxdemos/hello       # имя образа
