--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,9 +1,9 @@
 ---
-apiVersion: v1
+apiVersion: v1                      ### в этом файле описаны данные о чарте ###
 name: hello_app
-version: 1.0.0
+version: 1.0.0                      # версия самого чарта
 description: sample helm chart
 maintainers:
   - name: Anastasiia Minkova
     email: n.kim24535@gmail.com
-appVersion: 1.0.0
+appVersion: 1.0.0                   # версия приложения, удобно для селектора по версии
