--- a/values.yaml
+++ b/values.yaml
@@ -1,5 +1,5 @@
 app:                               ### блок про деплой ### 
-  name: hello_app                  # название приложения
+  name: hello-app                  # название приложения
   standName:                       # полезная переменная для выкатки на разные стенды
   secretName: hello_secret         # имя файла с секретами
   branch: develop                  # полезная переменная для передачи в аннтоцию имени ветки
