--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: v1                      ### в этом файле описаны данные о чарте ###
-name: hello_app
+name: hello-app
 version: 1.0.0                      # версия самого чарта
 description: sample helm chart
 maintainers:
