--- a/values.yaml
+++ b/values.yaml
@@ -1,7 +1,7 @@
 app:                               ### блок про деплой ### 
   name: hello-app                  # название приложения
   standName:                       # полезная переменная для выкатки на разные стенды
-  secretName: hello_secret         # имя файла с секретами
+  secretName: hello-secret         # имя файла с секретами
   branch: develop                  # полезная переменная для передачи в аннтоцию имени ветки
   replicas: 2                      # количество реплик для приложения
 
