--- a/values.yaml
+++ b/values.yaml
@@ -6,7 +6,7 @@ app:                               ### блок про деплой ###
   replicas: 2                      # количество реплик для приложения
 
 image:                             ### блок про образ ###
-  app: nginx #hellonginxdemos/hello       # имя образа
+  app: nginxdemos/hello            # имя образа
   tag:  latest                     # тег образа
   
 service:                           ### блок про сервис ###
@@ -17,7 +17,7 @@ sample:                            ### блок про переменные ###
   env: 123                         # здесь могла бы быть ваша переменная
 
 config:                            
-  env: "456"                         # здесь могла бы быть ваша переменная для конфигмапы
+  env: "456"                       # здесь могла бы быть ваша переменная для конфигмапы
 
 limits:                            ### блок про лимиты ###
   cpu: "2"                         # 2 ядра, если приложение потребует больше, оно будет тормозить
