--- a/templates/hpa.yaml
+++ b/templates/hpa.yaml
@@ -17,5 +17,5 @@ spec:
       name: cpu
       target:
         type: Utilization
-        averageUtilization: 50
+        averageUtilization: "{{ .Values.hpa.averageUtilization }}"
 {{- end }}
